# twitch-daily-earnings

./: .env.example  .gitignore  README.md  pyproject.toml  twitch_earnings.db
src/twitch_earnings/: bot.py  cli.py  config.py  db.py  streamer.py  tracker.py
src/twitch_earnings/components/: earnings.py
