[project]
name = "twitch-daily-earnings"
version = "0.1.0"
description = "Twitch chat bot that reports estimated daily stream earnings"
requires-python = ">=3.11"
dependencies = [
    "twitchio[starlette]>=3.2,<4",
    "typer>=0.15",
    "rich>=13",
    "pydantic-settings>=2",
    "python-dotenv>=1",
    "requests>=2.32.5",
    "websockets>=16.0",
]

[project.scripts]
twitch-earnings = "twitch_earnings.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/twitch_earnings"]
